fix: Columns size and wrap

--- a/src/sass/admin/components/_table.sass
+++ b/src/sass/admin/components/_table.sass
@@ -32,3 +32,14 @@ table
     
     th
       text-align: left
+    
+    td
+      padding-right: 50px
+      white-space: nowrap
+
+      &.message
+        line-height: 1.5
+        white-space: initial
+
+      &:last-of-type
+        padding-right: 0
